--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-screens": "^3.34.0",
     "react-native-svg": "15.2.0",
     "react-native-tooltip": "^5.2.0",
-    "react-native-walkthrough-tooltip": "^1.6.0"
+    "react-native-walkthrough-tooltip": "^1.6.0",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
