--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
@@ -37,8 +38,7 @@
     "react-native-svg": "15.2.0",
     "react-native-tooltip": "^5.2.0",
     "react-native-walkthrough-tooltip": "^1.6.0",
-    "react-native-web": "^0.19.12",
-    "@expo/metro-runtime": "~3.2.3"
+    "react-native-web": "^0.19.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
