--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
+    "@react-navigation/material-bottom-tabs": "^6.2.29",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-blur": "~13.0.2",
+    "expo-dev-client": "~4.0.28",
+    "expo-file-system": "~17.0.1",
     "expo-linear-gradient": "^13.0.2",
+    "expo-sharing": "~12.0.1",
     "expo-status-bar": "~1.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -30,6 +34,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.12.5",
+    "react-native-picker-select": "^9.3.1",
     "react-native-pie-chart": "^3.0.2",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.10.1",
@@ -37,10 +42,9 @@
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.2.0",
     "react-native-tooltip": "^5.2.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-walkthrough-tooltip": "^1.6.0",
-    "react-native-web": "^0.19.12",
-    "expo-file-system": "~17.0.1",
-    "expo-sharing": "~12.0.1"
+    "react-native-web": "^0.19.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
